20000502-19:28 GMT+1 Victor Szakats <info@szelvesz.hu>

   * source/vm/hvm.c
     % hb_vmFunction() and hb_vmSendFunc() "inlined".
       Note that hb_vmFunction() is still there since it's used from one 
       places in classes.c.

20000502-19:12 GMT+1 Victor Szakats <info@szelvesz.hu>

   * makefile.vc
     * EVAL.C moved to VM from RTL

   * source/vm/proc.c
     ! Typo.

   * make_gnu.cmd
     + Error output redirection readded to be in sync with the other make 
       files. If you need to customize this for your own taste, please make 
       a local copy of it before.

20000502-17:15 GMT+1 Ryszard Glab <rglab@imid.med.pl>

    *makefile.bc
    *source/rtl/Makefile
    *source/vm/Makefile
    -source/rtl/eval.c
    +source/vm/eval.c
	* fixed bug in EVAL function when a parameter was passed using
	the reference
	* since the EVAL function is using a direct stack access instead
	of hb_param() function the file eval.c is now moved into 
	VM directory
	

20000502-16:22 GMT+1 Ryszard Glab <rglab@imid.med.pl>

    *source/compiler/harbour.l
	* fixed syntax:
	RETURN ++variable

20000502-16:07 GMT+1 Ryszard Glab <rglab@imid.med.pl>

    *source/compiler/hbpcode.c
	* increased buffers size used by sprintf to avoid GPF/code dumps
    
20000502-14:55 GMT+1 Ryszard Glab <rglab@imid.med.pl>

    *source/vm/hvm.c
	* fixed bug during accessing a constant arrays caused by
	the optimization - { 1, 2, 3 }[ n ]

20000502-14:25 GMT+1 Ryszard Glab <rglab@imid.med.pl>

    *source/compiler/harbour.c
      * fixed unused variable warning in a code that nobody
      is remembering why it was there

20000502-10:41 GMT+1 Victor Szakats <info@szelvesz.hu>

   * include/hbpcode.h
   * include/hbexprb.c
   * include/hbexprc.c
   * include/hbvm.h
   * source/compiler/hbpcode.c
   * source/compiler/hbfix.c
   * source/compiler/genc.c
   * source/vm/hvm.c
     + HB_P_SEND and HB_P_SENDSHORT pcodes added. At this moment they are 